--- a/PassagensAereasWeb/PassagensAereasWeb-ejb/nbproject/project.properties
+++ b/PassagensAereasWeb/PassagensAereasWeb-ejb/nbproject/project.properties
@@ -1,5 +1,6 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=true
+annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_factory=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
@@ -34,10 +35,14 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 jar.name=PassagensAereasWeb-ejb.jar
+jars.in.ejbjar=false
 javac.classpath=
 javac.debug=true
 javac.deprecation=false
-javac.processorpath=${javac.classpath}
+javac.processorpath=\
+    ${javac.classpath}:\
+    ${libs.eclipselink.classpath}:\
+    ${libs.eclipselinkmodelgen.classpath}
 javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
@@ -69,4 +74,5 @@ runmain.jvmargs=
 source.encoding=UTF-8
 source.root=src
 src.dir=${source.root}/java
+src.Pacote%20de%20C\u00f3digos-fonte.dir=Pacote de C\u00f3digos-fonte
 test.src.dir=test
